engr441/while-jvm/tests/valid/RecordDefine_Valid_1.while
type point is {int x, int y}

point f(point x) {
    return x;
}

void main() {
    point p = f({x:1,y:1});
    assert p == {x:1,y:1};
}
