engr441/while-jvm/tests/invalid-defassign/DefiniteAssign_Invalid_11.while
int f(int x) {
    int y;
    {int f} rs = {f:y};
    return rs.f;
}
